try fix marjor60; 只编译为java8版本, 移除java16,17,18的兼容和相关代码